--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "devDependencies": {
+    "@league-of-foundry-developers/foundry-vtt-types": "^12.0.0"
+  },
   "private": true
 }
